--- a/Forum/pom.xml
+++ b/Forum/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.mcmainiac</groupId>
     <artifactId>Forum</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>Bosym-1.0</version>
 
     <repositories>
         <repository>
