--- a/KingUndercover/pom.xml
+++ b/KingUndercover/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.mcmainiac</groupId>
     <artifactId>KingUndercover</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>Bosym-1.0</version>
 
     <repositories>
         <repository>
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>me.mcmainiac</groupId>
             <artifactId>ArenaManager</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>Bosym-1.0</version>
         </dependency>
 
         <dependency>
